Update FoodHarvesting.java